<resources>
    <string name="app_name">rat-app</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="title_activity_rat_sightings_list">All Rat Sightings</string>
    <string name="title_activity_rat_sighting_report">Rat Sighting Details</string>

    <!-- Strings related to welcome screen -->
    <string name="get_started_msg">Get Started</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_ratsighting_list">RatSightings</string>
    <string name="title_ratsighting_detail">RatSighting Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_single_rat_maps">Map</string>
    <string name="cityLabel">City</string>
    <string name="addressLabel">Address</string>
    <string name="zipLabel">00000</string>
    <string name="loctypeLabel">Location Type</string>
    <string name="dateLabel">date</string>
    <string name="boroughLabel">Borough</string>
    <string name="longitudeLabel">00000</string>
    <string name="latitudeLabel">00000</string>
    <string name='dateSelectLabel'>Select start date:</string>
    <string name="nextLabel">Next</string>
    <string name="select_finish_date">Select Finish Date:</string>
    <string name="showLabelFilter2">Show</string>
    <string name="welcome_to_our_app_label">Welcome to our app!</string>
    <string name="view_rat_sightings_label">View Rat Sightings</string>
    <string name="logout_label_home">Logout</string>
    <string name="add_sighting_label">Add Sighting</string>
    <string name="not_have_an_account_label">Not have an account?</string>
    <string name="back_label_maps">Back</string>
    <string name="go_to_map_label">Go to Map</string>
    <string name="go_to_graph_label">Go To Graph</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="account_type_label">Account Type:</string>
    <string name="you_ve_spotted_a_rat_label">You\'ve spotted a Rat!</string>
    <string name="create_rat_label">Create Rat</string>
    <string name="cancel_label_reporting">Cancel</string>
    <string name="the_app_logo_label">The app logo</string>
    <string name="you_dirty_rat_label">YOU DIRTY RAT</string>
    <string name="mark_and_avoid_rats_label">Mark and avoid rats.</string>
    <string name="manhattan_new_york_label">Manhattan, New York</string>
    <string name="date_label">Date</string>
    <string name="street_name_label">STREET NAME GOES HERE</string>
    <string name="key_label">TextView</string>
    <string name="date_label_ratreport">TextView</string>
    <string name="loc_type_label">TextView</string>
    <string name="zip_code_label">TextView</string>
    <string name="address_label_rr">TextView</string>
    <string name="city_label_rr">TextView</string>
    <string name="borough_label">TextView</string>
    <string name="latitude_label">TextView</string>
    <string name="longitude_label">TextView</string>
    <string name="facebook_app_id">2000537083559522</string>
    <string name="fb_login_protocol_scheme">fb2000537083559522</string>
    <string name="share">Share</string>
</resources>
