<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp"
        android:text="@string/key_label" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/key"
        android:layout_below="@+id/key"
        android:layout_marginTop="18dp"
        android:text="@string/date_label_ratreport" />

    <TextView
        android:id="@+id/loc_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/date"
        android:layout_below="@+id/date"
        android:layout_marginTop="20dp"
        android:text="@string/loc_type_label" />

    <TextView
        android:id="@+id/zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/loc_type"
        android:layout_below="@+id/loc_type"
        android:layout_marginTop="20dp"
        android:text="@string/zip_code_label" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/zip_code"
        android:layout_below="@+id/zip_code"
        android:layout_marginTop="21dp"
        android:text="@string/address_label_rr" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address"
        android:layout_below="@+id/address"
        android:layout_marginTop="20dp"
        android:text="@string/city_label_rr" />

    <TextView
        android:id="@+id/borough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/city"
        android:layout_centerVertical="true"
        android:text="@string/borough_label" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/borough"
        android:layout_below="@+id/borough"
        android:layout_marginTop="24dp"
        android:text="@string/latitude_label" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/latitude"
        android:layout_below="@+id/latitude"
        android:layout_marginTop="26dp"
        android:text="@string/longitude_label" />

    <Button
        android:id="@+id/sharebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/longitude"
        android:layout_below="@+id/longitude"
        android:layout_marginTop="27dp"
        android:text="Share Rat Sighting" />

    <com.facebook.share.widget.ShareButton
        android:id="@+id/fb_share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/sharebutton"
        android:layout_alignStart="@+id/sharebutton"
        android:layout_below="@+id/sharebutton"
        android:contentDescription="@string/share"
        android:visibility="invisible" />

</RelativeLayout>